[gd_scene load_steps=4 format=3 uid="uid://ci0yw2omi1g5f"]

[ext_resource type="Texture2D" uid="uid://sa8x5ddvrehl" path="res://art/campfire_button_images/Icon-Campfire.png" id="1_ekofv"]
[ext_resource type="Script" path="res://scenes/ui/campfire_option_ui.gd" id="1_xju6s"]

[sub_resource type="LabelSettings" id="LabelSettings_p7fwl"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="CampfireOptionUI" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -43.5
offset_right = 30.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_xju6s")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonImage" type="TextureRect" parent="Button"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ekofv")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Rest"
label_settings = SubResource("LabelSettings_p7fwl")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
